# rsomics-bed-split

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: input.bed  simple_n4.00001.bed  simple_n4.00002.bed  simple_n4.00003.bed  simple_n4.00004.bed  size_n4.00001.bed  size_n4.00002.bed  size_n4.00003.bed  size_n4.00004.bed
