[package]
name = "rsomics-bed-split"
version = "0.1.0"
description = "Split a BED file into N equal-base-pair or equal-record parts — Rust port of bedtools split"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-bed-split"
path = "src/main.rs"

[lib]
name = "rsomics_bed_split"
path = "src/lib.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
